[package]
name = "kseq"
version = "0.2.1"
authors = ["Moold <mooldhu@gmail.com>"]
edition = "2018"
license = "MIT"
description = "a simple fasta/fastq format parser library"
homepage = "https://github.com/moold/kseq"
repository = "https://github.com/moold/kseq"
readme = "README.md"
keywords  = ["fastq", "fasta"]

[dependencies]
flate2 = { version = ">=0.2.18", features = ["zlib"], default-features = false }

