[package]
name = "kseq"
version = "0.5.2"
authors = ["Moold <mooldhu@gmail.com>"]
edition = "2018"
license = "MIT"
description = "a simple fasta/fastq format parser library"
homepage = "https://github.com/moold/kseq"
repository = "https://github.com/moold/kseq"
readme = "README.md"
keywords  = ["fastq", "fasta"]

[dependencies]
atty = "0.2"
flate2 = { version = ">=1.0.17", features = ["zlib-ng-compat"], default-features = false }
memchr = "2.5"

[dev-dependencies]
criterion = "0.3"
needletail = "0.4"

[[bench]]
name = "benchmark"
harness = false

